# openFPGALoader

./: .btd.yml  .buildinfo  .gitignore  70-openfpgaloader.rules  99-openfpgaloader.rules  CMakeLists.txt  INSTALL.md  Makefile  README.md  TODO.md  altera.cpp  altera.hpp  bitparser.cpp  bitparser.hpp  board.hpp  cable.hpp  configBitstreamParser.cpp  configBitstreamParser.hpp  device.cpp  device.hpp  display.hpp  epcq.cpp  epcq.hpp  fsparser.cpp  fsparser.hpp  ftdijtag.cpp  ftdijtag.hpp  ftdipp_mpsse.cpp  ftdipp_mpsse.hpp  ftdispi.cpp  ftdispi.hpp  genindex.html  gowin.cpp  gowin.hpp  index.html  jedParser.cpp  jedParser.hpp  jetson-nano-gpio.patch  lattice.cpp  lattice.hpp  (+22 more)
.doctrees/: environment.pickle  index.doctree  todo.doctree
.doctrees/__intersphinx_cache__/: constraints_objects.inv  python_objects.inv
.doctrees/compatibility/: board.doctree  cable.doctree  fpga.doctree
.doctrees/guide/: advanced.doctree  first-steps.doctree  install.doctree  troubleshooting.doctree
.doctrees/vendors/: anlogic.doctree  colognechip.doctree  efinix.doctree  gowin.doctree  intel.doctree  lattice.doctree  xilinx.doctree
.github/workflows/: Test.yml  build-fgg676.yml  pixi-build.yml  test.yml
_sources/: todo.rst.txt
_sources/compatibility/: board.rst.txt  cable.rst.txt  fpga.rst.txt
_sources/guide/: advanced.rst.txt  first-steps.rst.txt  install.rst.txt  troubleshooting.rst.txt
_sources/vendors/: anlogic.rst.txt  colognechip.rst.txt  efinix.rst.txt  intel.rst.txt  lattice.rst.txt
_static/: pygments.css
_static/css/: theme.css
bpiOverJtag/: Makefile  bpiOverJtag_core.v  build_bpi_xc7k480t.sh  build_bpi_xc7k480t.tcl  constr_xc7k480t_bpi_ffg1156.xdc  constr_xc7k_ffg1156.xdc  xilinx_bpiOverJtag.v
cmake/: Toolchain-x86_64-w64-mingw32-clang.cmake  Toolchain-x86_64-w64-mingw32.cmake
cmake/Modules/: CrossCompileWindows.cmake  FindGZIP.cmake
compatibility/: board.html  cable.html  fpga.html
doc/: FPGAs.yml  Makefile  advanced-usage.md  anlogic.md  board-compatibility-list.md  boards.py  boards.yml  cable-compatibility-list.md  cable.yml  conf.py  data.py  efinix.md  first-steps.md  fpga-compatibility-list.md  gowin.md  index.rst  intel.md  lattice.md  requirements.txt  troubleshooting.md  xilinx.md
doc/compatibility/: board.rst  cable.rst  fpga.rst
doc/guide/: advanced.rst  first-steps.rst  install.rst  troubleshooting.rst
doc/vendors/: colognechip.rst  efinix.rst  gowin.rst  intel.rst  lattice.rst  xilinx.rst
guide/: advanced.html  first-steps.html  install.html  troubleshooting.html
msys2/: PKGBUILD
openFPGALoader/: CMakeLists.txt  altera.hpp  bitparser.cpp  board.hpp  epcq.cpp  epcq.hpp  gowin.hpp  latticeBitParser.cpp  mcsParser.cpp  xilinx.hpp
python/: README.md  bindings.cpp  example.py
python/openfpgaloader/: __init__.py
scripts/msys2/: PKGBUILD
spiOverJtag/: .gitignore  Makefile  README.md  altclkctrl_inst.v  altera_spiOverJtag.sdc  altera_spiOverJtag.v  build.py  constr.xdc  constr_cycloneV.tcl  constr_xc3s_vq100.ucf  constr_xc6s_csg324.ucf  constr_xc6s_csg484.ucf  constr_xc6s_fgg484.ucf  constr_xc6s_ftg256.ucf  constr_xc6s_t_csg324.ucf  constr_xc6s_t_fgg484.ucf  constr_xc6s_tqg144.ucf  constr_xc6v_ff784.ucf  constr_xc7a100.xdc  constr_xc7a35.xdc  constr_xc7a_cpg236.xdc  constr_xc7a_cpg238.xdc  constr_xc7a_csg324.xdc  constr_xc7a_csg325.xdc  constr_xc7a_csg325_1v35.xdc  constr_xc7a_fbg484.xdc  constr_xc7a_fbg676.xdc  constr_xc7a_fgg676.xdc  constr_xc7a_ftg256.xdc  constr_xc7a_sbg384.xdc  constr_xc7a_sbg484.xdc  constr_xc7k_fbg484.ucf  constr_xc7k_fbg484.xdc  constr_xc7k_fbg676.xdc  constr_xc7k_fbg900.ucf  constr_xc7k_fbg900.xdc  constr_xc7k_ffg676.ucf  constr_xc7k_ffg676.xdc  constr_xc7k_ffg900.xdc  constr_xc7k_ffg901.ucf  (+34 more)
spiOverJtag/xc6/: .gitignore  constr_xc6s_fgg484.ucf  constr_xc6slx9_tqg144.ucf  xilinx_spiOverJtag_xc6.tcl  xilinx_spiOverJtag_xc6.vhd
src/: altera.cpp  altera.hpp  anlogic.cpp  anlogic.hpp  anlogicBitParser.cpp  anlogicBitParser.hpp  anlogicCable.cpp  anlogicCable.hpp  bitparser.cpp  bitparser.hpp  bmd.cpp  bmd.hpp  bmd_remote.h  bmp.cpp  bmp.hpp  bmp_remote.h  board.hpp  bpiFlash.cpp  bpiFlash.hpp  cable.hpp  ch347jtag.cpp  ch347jtag.hpp  ch552_jtag.cpp  ch552_jtag.hpp  cmsisDAP.cpp  cmsisDAP.hpp  colognechip.cpp  colognechip.hpp  colognechipCfgParser.cpp  colognechipCfgParser.hpp  common.cpp  common.hpp  configBitstreamParser.cpp  configBitstreamParser.hpp  cxxopts.hpp  device.cpp  device.hpp  dfu.cpp  dfu.hpp  dfuFileParser.cpp  (+103 more)
src/makestuff/: common.h  libfpgalink.h
vendors/: anlogic.html  colognechip.html  efinix.html  gowin.html  intel.html  lattice.html  xilinx.html
